2006-03-17  Massimo Cora' <maxcvs@email.it>
	
	reviewed by: Johannes Schmid <jhs@gnome.org>
	
	* plugins/document-manager/anjuta-docman.c:
	Implement tab drag and drop

2006-03-16  Johannes Schmid <jhs@gnome.org>

	* plugins/build-basic-autotools/anjuta-build-basic-autotools-plugin.glade:
	plugins/build-basic-autotools/build-basic-autotools.c:
	
	Implemented "install as root"-feature (#321455)

2006-03-16  Johannes Schmid <jhs@gnome.org>

	* mime/.cvsignore
	plugins/sourceview/.cvsignore
	plugins/tools/scripts/.cvsignore:
	Added/extended .cvsignore files
	
	* plugins/sourceview/sourceview-autocomplete.c:
	plugins/sourceview/sourceview-autocomplete.h:
	plugins/sourceview/sourceview-prefs.c:
	plugins/sourceview/sourceview-private.h:
	plugins/sourceview/sourceview.glade:
	Autcomplete just works(tm) now and respects preferences
	
	* plugins/sourceview/sourceview.c: (ieditor_get_current_word):
	Use better algorithm from autocomplete

2006-03-15  Johannes Schmid <jhs@gnome.org>

	* src/anjuta-app.c:
	Fixed bug #304495

2006-03-15  Johannes Schmid <jhs@gnome.org>

	* libanjuta/interfaces/libanjuta.idl:
	plugins/class-gen/class_gen.c:
	plugins/file-wizard/file.c: (on_new_file_okbutton_clicked):
	plugins/project-manager/plugin.c:
	
	Allow to add multiple source files (#320191)
	
	* configure.in: Require gnome-build 0.1.3

2006-03-14  Johannes Schmid <jhs@gnome.org>

	* plugins/macro/macro-utils.c: Fixed bug #333606
	* plugins/file-wizard/file.c: Fixed bug #333601

2006-03-13  Johannes Schmid <jhs@gnome.org>

	* plugins/sourceview/sourceview_autocomplete.c
	plugins/sourceview/sourceview_autocomplete.h
	plugins/sourceview/sourceview.c
	plugins/sourceview/sourceview-private.h
	plugins/sourceview/sourceview-prefs.c:
	
	Cleaned up and fixed several issues
	
2006-03-13  Johannes Schmid <jhs@gnome.org>

	* plugins/sourceview/Makefile.am:
	plugins/sourceview/sourceview-autocomplete.c
	plugins/sourceview/sourceview-autocomplete.h: